--- a/index.html
+++ b/index.html
@@ -13,3 +13,21 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Prateek's Portfolio</h1>
+    <hr />
+    <h2>I'm a Web Developer</h2>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+    <img src="./assets\images/movie-ranking.png" height="200" alt="Movie Ranking Project preview"/>
+    <h3><a href="./public/birthday-invite.html">BirthDay Invite Project</a></h3>
+    <img src="./assets/images/birthday-invite.png" height="200" alt="Birthday Invite Project preview">
+    <h2><a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a></h2>
+</body>
+</html>
