--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,4 +1,4 @@
-<h1>The Best Movies According to Angela</h1>
+<!-- <h1>The Best Movies According to Angela</h1>
 <h2>My top 3 movies of all-time.</h2>
 <hr />
 <h3>Spirited Away</h3>
@@ -6,4 +6,13 @@
 <h3>Ex Machina</h3>
 <p>Really cool sci-fi movie.</p>
 <h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<p>Super beautiful film. Really artistic.</p> -->
+<h1>The Best Movies According to itspratechie</h1>
+<h2>My top 3 movies of all time.</h2>
+<hr/>
+<h3>Yeh Jawani Hai Deewai</h3>
+<p>This is my favourite movie. I love the concept they use 10 years ago.</p>
+<h3>Vincezo</h3>
+<p>This is a Korean Drama. This is some kind of different fro rest of the Korean Drama. It focus on Action aswell.</p>
+<H3>Saas Bahu or Flamingo</H3>
+<p>This is the best Indian Web Series which i love the most. The story and the characters playing is on another level.</p>
