--- a/public/contact.html
+++ b/public/contact.html
@@ -1,4 +1,4 @@
-<h1>Contact Me</h1>
+<!--<h1>Contact Me</h1>
 <p>Tel: +123456789</p>
 <p>Email: me@gmail.com</p>
 <p>Address:</p>
@@ -6,4 +6,14 @@
   123 North Street<br />
   Some City<br />
   Some Country <br />
+</p>
+-->
+<h1>Contact Me</h1>
+<p>Tel: +9190884049454</p>
+<p>Email: annupachauri6@gmail.com</p>
+<p>Address:</p>
+<p>
+  Vill- Lahalar, Khandauli<br />
+  Agra<br />
+  India <br />
 </p>
